--- a/jour02/job05/style.css
+++ b/jour02/job05/style.css
@@ -1,14 +1,15 @@
-
-body{
-min-height: 4096px;
-margin: 0;
+body {
+  min-height: 4096px;
+  margin: 0;
+  padding: 0;
 }
 
-footer{
-    width: 100%;
-   
-    position: fixed;
-    bottom: 0;
-    height: 100px;
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: hsl(320, 100%, 60%, 30%);
+  z-index: 1000;
+  height: 70px;
 }
-
